--- a/style.css
+++ b/style.css
@@ -311,7 +311,7 @@ span{
     justify-content: center;
     align-items: center;  
     flex-direction: column;
-    min-height: auto;
+    min-height: 850px;
     padding-bottom:5rem ;
 } 
 .education .education-row{
