--- a/style.css
+++ b/style.css
@@ -479,6 +479,12 @@ span{
 .skills-column:nth-child(1) .skills-content .progress:nth-child(6) .bar span{
     width: 90%;
 }
+.skills-column:nth-child(1) .skills-content .progress:nth-child(7) .bar span{
+    width: 90%;
+}
+.skills-column:nth-child(1) .skills-content .progress:nth-child(8) .bar span{
+    width: 90%;
+}
 
 .skills-column:nth-child(2) .skills-content .progress:nth-child(1) .bar span{
     width: 75%;
